-------------------------------------------------------------------------------
  Version 20190125 (2019-01-25)
-------------------------------------------------------------------------------
  * Small changes

-------------------------------------------------------------------------------
  Version 20190124 (2019-01-24)
-------------------------------------------------------------------------------
  * Renamed sparky-backup-server to sparky-ad-server

-------------------------------------------------------------------------------
  Version 20181221 (2018-12-21)
-------------------------------------------------------------------------------
  * Added Italian locale

-------------------------------------------------------------------------------
  Version 20181122 (2018-11-22)
-------------------------------------------------------------------------------
  * Small fixes

-------------------------------------------------------------------------------
  Version 20181116 (2018-11-16)
-------------------------------------------------------------------------------
  * Small fixes

-------------------------------------------------------------------------------
  Version 20181114.4 (2018-11-14)
-------------------------------------------------------------------------------
  * Small fixes

-------------------------------------------------------------------------------
  Version 20181114.3 (2018-11-14)
-------------------------------------------------------------------------------
  * Small fixes

-------------------------------------------------------------------------------
  Version 20181114.2 (2018-11-14)
-------------------------------------------------------------------------------
  * Small fix around dialog windows 

-------------------------------------------------------------------------------
  Version 20181114.1 (2018-11-14)
-------------------------------------------------------------------------------
  * Deps fixed
