@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20190127 (2019-01-27)
+-------------------------------------------------------------------------------
+  * Renamed script to sparky-ad-server
+  * Fixed locale path
+
+-------------------------------------------------------------------------------
   Version 20190125 (2019-01-25)
 -------------------------------------------------------------------------------
   * Small changes
